# liljekvist.cc-mirror

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  qodana.yaml  setup-vps.sh
ascii_art/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt
nginx/: liljekvist.conf
src/: ascii_art.rs  commands.rs  config.rs  main.rs  state.rs
src/handlers/: mod.rs  ws.rs
src/models/: mod.rs
templates/: base.html  index.html
