[package]
name = "liljekvist-cc-mainpage"
version = "1.0.0-beta1"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-template = { version = "3.0.0", features = ["tera"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.10.0"
tower-http = { version = "0.6", features = ["fs"] }
